@@ -1532,9 +1532,10 @@ class Language {
 
 		if( !is_array( $rawEntry ) ) {
 			error_log( "\"$rawEntry\" is not a valid magic thingie for \"$mw->mId\"" );
+		} else {
+			$mw->mCaseSensitive = $rawEntry[0];
+			$mw->mSynonyms = array_slice( $rawEntry, 1 );
 		}
-		$mw->mCaseSensitive = $rawEntry[0];
-		$mw->mSynonyms = array_slice( $rawEntry, 1 );
 	}
 
 	/**
